[package]
name = "unienc_godot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.5"
unienc_core = { path = "../unienc_core" }
unienc = { path = "../unienc" }
bincode = { workspace = true }
tokio = { version = "1", features = ["full"] }
