[package]
name = "unienc_godot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git" }
unienc_core = { path = "../unienc_core" }
unienc = { path = "../unienc" }
bincode = { workspace = true }
tokio = { version = "1", features = ["full"] }
